feat: create rules from transactions
